<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:layout_margin="8dp"
        android:theme="@style/Theme.MaterialComponents.Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_get_playback_token"
        android:text="@string/get_playback_token"
        android:layout_margin="8dp"
        android:theme="@style/Theme.MaterialComponents.Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start_playback_session"
        android:text="@string/start_playback_session"
        android:layout_margin="8dp"
        android:theme="@style/Theme.MaterialComponents.Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_get_stream_info"
        android:text="@string/get_stream_info"
        android:layout_margin="8dp"
        android:theme="@style/Theme.MaterialComponents.Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_send_heartbeat"
        android:text="@string/send_heartbeat"
        android:layout_margin="8dp"
        android:theme="@style/Theme.MaterialComponents.Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_end_session"
        android:text="@string/end_session"
        android:layout_margin="8dp"
        android:theme="@style/Theme.MaterialComponents.Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>